# pilot-hdc-pipelines

./: .env.schema  .gitignore  .pre-commit-config.yaml  README.md
bids-validator/: .env.schema  Dockerfile  README.md  pyproject.toml
bids-validator/operations/: __main__.py  config.py  locks.py  logger.py  models.py
bids-validator/operations/commands/: validate_dataset.py
bids-validator/scripts/: config.py  locks.py  logger.py  validate_dataset.py
bids-validator/tests/: conftest.py  test_validate_dataset.py
filecopy/: .env.schema  Dockerfile  README.md  pyproject.toml
filecopy/operations/: __main__.py  app.py  config.py  duplicated_file_names.py  kafka_producer.py  logger.py  managers.py  minio_boto3_client.py  models.py  traverser.py
filecopy/operations/commands/: copy.py  copy_to_central_node.py  delete.py  share_dataset_version.py
filecopy/operations/services/approval/: client.py
filecopy/operations/services/central_node/: client.py
filecopy/operations/services/dataops/: client.py
filecopy/operations/services/dataset/: client.py
filecopy/operations/services/metadata/: client.py
filecopy/operations/services/notification/: client.py  models.py
filecopy/operations/services/redis/: client.py
filecopy/tests/: conftest.py  test_duplicated_file_names.py  test_managers.py  test_models.py  test_traverser.py
filecopy/tests/fixtures/: commands.py  fake.py  node.py  services.py
filecopy/tests/services/approval/: test_client.py
filecopy/tests/services/central_node/: test_client.py
filecopy/tests/services/dataops/: test_client.py
(+5 files in other folders)
