[tool.poetry]
name = "bids-validator"
version = "2.2.15"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
minio = "^7.1.7"
pydantic = "1.10.19"
python-dotenv = "0.19.1"
python-json-logger = "^2.0.2"
psycopg2-binary = "2.9.3"
click = "8.1.2"
SQLAlchemy = "^1.4.36"
requests = "2.24.0"
asyncio = "^3.4.3"
pilot-platform-common = "0.8.2"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "3.0.0"
pytest-httpserver = "1.0.2"
pytest-mock = "3.6.1"
Faker = "17.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
