[tool.poetry]
name = "filecopy"
version = "2.2.15"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
logger = "0.1.0"
click = "8.1.2"
itsdangerous = "1.1.0"
psycopg2-binary = "2.9.3"
pydantic = "1.10.19"
requests = "2.24.0"
python-dotenv = "0.19.1"
SQLAlchemy = "1.4.27"
aioredis = "2.0.1"
fastavro = "1.10.0"
aiokafka = "^0.7.2"
pilot-platform-common = "0.8.2"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-cov = "^3.0.0"
pytest-httpserver = "1.0.2"
pytest-mock = "3.6.1"
Faker = "9.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
